--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Conversas com os meus sobrinhos
+author: Tiago Gonçalves
+email: tvieiragoncalves@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Conversas sobre tudo e sobre nada, sobre coisas pequenas e coisas grandes, sobre coisas escondidas e conhecidas.
+  Estas conversas contam com a distinta participação da Marizé e do Rafa, sendo moderadas pelo muito paciente Tiago Gonçalves.
+  
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: tiago_1989
+github_username:  tvieiragoncalves
 rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
