--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ rss: rss
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jekyll
-# linkedin_username: jekyll
+linkedin_username: tvieiragoncalves
 # pinterest_username: jekyll
 # youtube_username: jekyll
 # googleplus_username: +jekyll
